--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ $(function () {
     <nav>
       <ul class="menu">
         <li class="current"><a href="index.html" class="home"><img src="images/home.jpg" alt=""></a></li>
-        <li><a href="about.html">About</a></li>
+        <li><a href="about.html">Jorge Alquezar</a></li>
         <li><a href="maintenance.html">Maintenance</a></li>
         <li><a href="repair.html">Repair</a></li>
         <li><a href="price-list.html">Price List</a></li>
